examples/test/testpolicy6167.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6167
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key1: value4
      key21: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value19
      podSelector:
        matchLabels:
          key33: value21
          key29: value37
          key38: value10
